--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -556,7 +556,7 @@ entries:
     full: "Guillermin, M. 2012. “Etude de la transparence de certains matériaux de consolidation des supports de peinture en vue de la mise au point d’un rentoilage transparent.” Mémoire de fin d’études, restauration conservation de biens culturels, Ecole de Condé, Paris."
   - id: "Gupta 1993"
     full: "Gupta, K. K. 1993. *Restoration of Oil Paintings*. Delhi: Creative Offset."
-  - id: "Hacke 1963–64"
+  - id: "Hacke 1963"
     full: "Hacke, B. 1963. “En utraditionel metode til vacuum rentoillering af temperamaleri på lærred.” *Meddelelser om Konservering* 4: 42–48."
   - id: "Hacke 1963–64"
     full: "Hacke, B. 1963–64. “En utraditionel metode til vacuumrentoilering af temperamaleri på lærred.” *Meddelelser om konservering* 1, no. 4: 42–48."
