--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1156,11 +1156,11 @@ entries:
     full: "Ruuben, Tannar, and Nina Robbins. 2011.“Two Painted Works of Art on Diverse Supports–Adopting Paintings Conservation Methods and Materials in Specific Cases.” *ICOM Committee for Conservation 16th Triennial Conference Preprints*, *Lisbon, 19–23 September 2011*, edited by J. Bridgland, 1323–926. Paris: International Council of Museums."
   - id: "Ryder 1986"
     full: "Ryder, Nichole. 1986. “Acidity on Canvas Painting Supports: Deacidification of Two Twentieth Century Paintings.” *Conservator* 10: 31–36."
+  - id: "Sanchez Villavicencio, Young, and Thompson 2022"
+    full: "Sanchez, Villavicencio, D., C. Young, and K. Thompson. “How to Paint a Trade Union Banner: The Role of Sources and Reconstructions in the Characterisation of George Kenning’s Banners in Glasgow Museums.” In *Eighth Symposium of the ICOM-CC Working Group on Art Technological Source Research, Cologne, Germany, 26–27 September 2019*, 115–22. Glasgow: Enlighten Publications."
   - id: "Sannikova 2018"
     full: "Sannikova, Evgeniia. 2018. “Polyvinyl Butyral: Composition, Properties and History of Use in Conservation and Restoration.” *International Institute for Conservation of Historic and Artistic Works. Austria. Papers in Conservation* 35: 103–21."
-  - id: "Sanchez, Villavicencio, Young, and Thompson 2022"
-    full: "Sanchez, Villavicencio, D., C. Young, and K. Thompson. “How to Paint a Trade Union Banner: The Role of Sources and Reconstructions in the Characterisation of George Kenning's Banners in Glasgow Museums.” In *Eighth Symposium of the ICOM-CC Working Group on Art Technological Source Research, Cologne, Germany, 26–27 September 2019*, 115–22. Glasgow: Enlighten Publications."
-- id: "Saunders, Sitwell, and Staniforth 1991"
+  - id: "Saunders, Sitwell, and Staniforth 1991"
     full: "Saunders, David, Christine Leback Sitwell, and Sarah Staniforth. 1991. “Soft Pack: The Soft Option?” In *Art in Transit: Studies in the Transport of Paintings*, edited by Marion F. Mecklenburg, 311–22. Washington, DC: National Gallery of Art."
   - id: "Scalarone and Chiantore 2004"
     full: "Scalarone, D., and O. Chiantore. 2004. “FTIR Monitoring of Surfactant Phase Separation and Stability in Waterborne Organic Coatings and Artists’ Acrylic Paints.” In *Proceedings of the Sixth Infrared and Raman Users Group Conference (IRUG 6): Florence, Italy, March 29th–April 1st, 2004*, edited by Marcello Picollo. Padua: Il Prato."
