--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -356,8 +356,8 @@ entries:
     full: "Daudin-Schotte, Maude, Madeleine Bisschoff, Ineke Joosten, and Henk van Keulen. 2013. “Dry Cleaning Approaches for Unvarnished Paint Surfaces.” In *New Insights into the Cleaning of Paintings: Proceedings from the Cleaning 2010 International Conference, Universidad Politécnica de Valencia and Museum Conservation Institute*, edited by Marion F. Mecklenburg, A. Elena Charola, and Robert J. Koestler, 209–19. Washington, DC: Smithsonian Institution Scholarly Press. https://doi.org/10.5479/si.19492359.3.1."
   - id: "Davies and Rawlins 1946"
     full: "Davies, M., and F. I. G. Rawlins. 1946. “The War-time Storage in Wales of Pictures from the National Gallery, London.” *Transactions of the Honourable Society of Cymmrodorion*."
-  - id: "Debarax 2016"
-    full: "Debarax, Emilie. 2016. “Interview with Bogumil Jewsiewicki-Koss.” In *Congo Art Works: Peinture populaire,* edited by Bambi Ceuppens and Sammy Baloji, 5–8. Exhibition catalogue. Brussels: Africa Museum and Éditions Racine."
+  - id: "Desbarax 2016"
+    full: "Desbarax, Emilie. 2016. “Interview with Bogumil Jewsiewicki-Koss.” In *Congo Art Works: Peinture populaire,* edited by Bambi Ceuppens and Sammy Baloji, 5–8. Exhibition catalogue. Brussels: Africa Museum and Éditions Racine."
   - id: "Debenedetti 2004"
     full: "Debenedetti, E., ed. 2004. “Artisti e artigiani a Roma I, dagli stati delle anime del 1700, 1725, 1750, 1775.” Roma: Bonsignori."
   - id: "Debenedetti 2005"
